fix: enforce exclusive arena worlds